// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs changes active index 1`] = `
<div
  role="tablist"
>
  <div
    class="StyledBox-bStriS kZxJuf"
  >
    <button
      aria-expanded="true"
      aria-selected="true"
      class="StyledButton-gXzblK fYUIhN"
      role="tab"
      type="button"
    >
      <div
        class="StyledBox-bStriS gNLzjT"
      >
        <span
          class="StyledText-eJMSZI bxnpJv"
        >
          Tab 1
        </span>
      </div>
    </button>
    <button
      aria-expanded="false"
      aria-selected="false"
      class="StyledButton-gXzblK fYUIhN"
      role="tab"
      type="button"
    >
      <div
        class="StyledBox-bStriS elvBnI"
      >
        <span
          class="StyledText-eJMSZI guglNP"
          color="dark-4"
        >
          Tab 2
        </span>
      </div>
    </button>
  </div>
  <div
    aria-label="Tab 1 Tab Contents"
    role="tabpanel"
  >
    Tab body 1
  </div>
</div>
`;

exports[`Tabs changes to second tab 1`] = `
<div
  className="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    role="tablist"
  >
    <div
      aria-label={undefined}
      className="StyledBox-bStriS kZxJuf"
    >
      <button
        aria-expanded={false}
        aria-label={undefined}
        aria-selected={false}
        className="StyledButton-gXzblK fYUIhN"
        disabled={false}
        href={undefined}
        icon={undefined}
        label={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          aria-label={undefined}
          className="StyledBox-bStriS elvBnI"
        >
          <span
            className="StyledText-eJMSZI guglNP"
            color="dark-4"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded={true}
        aria-label={undefined}
        aria-selected={true}
        className="StyledButton-gXzblK fYUIhN"
        disabled={false}
        href={undefined}
        icon={undefined}
        label={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          aria-label={undefined}
          className="StyledBox-bStriS gNLzjT"
        >
          <span
            className="StyledText-eJMSZI bxnpJv"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 2 Tab Contents"
      role="tabpanel"
    >
      Tab body 2
    </div>
  </div>
</div>
`;

exports[`Tabs renders complex Tab title 1`] = `
<div
  className="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    role="tablist"
  >
    <div
      aria-label={undefined}
      className="StyledBox-bStriS kZxJuf"
    >
      <button
        aria-expanded={true}
        aria-label={undefined}
        aria-selected={true}
        className="StyledButton-gXzblK fYUIhN"
        disabled={false}
        href={undefined}
        icon={undefined}
        label={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          aria-label={undefined}
          className="StyledBox-bStriS gNLzjT"
        >
          <div>
            Tab 1
          </div>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-label={undefined}
        aria-selected={false}
        className="StyledButton-gXzblK fYUIhN"
        disabled={false}
        href={undefined}
        icon={undefined}
        label={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          aria-label={undefined}
          className="StyledBox-bStriS elvBnI"
        >
          <div>
            Tab 2
          </div>
        </div>
      </button>
    </div>
    <div
      aria-label="[object Object] Tab Contents"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs renders with Tab 1`] = `
<div
  className="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    role="tablist"
  >
    <div
      aria-label={undefined}
      className="StyledBox-bStriS kZxJuf"
    >
      <button
        aria-expanded={true}
        aria-label={undefined}
        aria-selected={true}
        className="StyledButton-gXzblK fYUIhN"
        disabled={false}
        href={undefined}
        icon={undefined}
        label={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          aria-label={undefined}
          className="StyledBox-bStriS gNLzjT"
        >
          <span
            className="StyledText-eJMSZI bxnpJv"
          >
            Tab 1
          </span>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-label={undefined}
        aria-selected={false}
        className="StyledButton-gXzblK fYUIhN"
        disabled={false}
        href={undefined}
        icon={undefined}
        label={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="tab"
        type="button"
      >
        <div
          aria-label={undefined}
          className="StyledBox-bStriS elvBnI"
        >
          <span
            className="StyledText-eJMSZI guglNP"
            color="dark-4"
          >
            Tab 2
          </span>
        </div>
      </button>
    </div>
    <div
      aria-label="Tab 1 Tab Contents"
      role="tabpanel"
    >
      Tab body 1
    </div>
  </div>
</div>
`;

exports[`Tabs renders without Tab 1`] = `
<div
  className="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    role="tablist"
  >
    <div
      aria-label={undefined}
      className="StyledBox-bStriS kZxJuf"
    />
    <div
      aria-label=" Tab Contents"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`Tabs sets on hover 1`] = `
<div
  role="tablist"
>
  <div
    class="StyledBox-bStriS kZxJuf"
  >
    <button
      aria-expanded="true"
      aria-selected="true"
      class="StyledButton-gXzblK fYUIhN"
      role="tab"
      type="button"
    >
      <div
        class="StyledBox-bStriS gNLzjT"
      >
        <span
          class="StyledText-eJMSZI bxnpJv"
        >
          Tab 1
        </span>
      </div>
    </button>
    <button
      aria-expanded="false"
      aria-selected="false"
      class="StyledButton-gXzblK fYUIhN"
      role="tab"
      type="button"
    >
      <div
        class="StyledBox-bStriS elvBnI"
      >
        <span
          class="StyledText-eJMSZI guglNP"
          color="dark-4"
        >
          Tab 2
        </span>
      </div>
    </button>
  </div>
  <div
    aria-label="Tab 1 Tab Contents"
    role="tabpanel"
  >
    Tab body 1
  </div>
</div>
`;

exports[`Tabs sets on hover 2`] = `
<div
  role="tablist"
>
  <div
    class="StyledBox-bStriS kZxJuf"
  >
    <button
      aria-expanded="true"
      aria-selected="true"
      class="StyledButton-gXzblK fYUIhN"
      role="tab"
      type="button"
    >
      <div
        class="StyledBox-bStriS gNLzjT"
      >
        <span
          class="StyledText-eJMSZI bxnpJv"
        >
          Tab 1
        </span>
      </div>
    </button>
    <button
      aria-expanded="false"
      aria-selected="false"
      class="StyledButton-gXzblK fYUIhN"
      role="tab"
      type="button"
    >
      <div
        class="StyledBox-bStriS cXdcRx"
      >
        <span
          class="StyledText-eJMSZI guglNP"
          color="dark-4"
        >
          Tab 2
        </span>
      </div>
    </button>
  </div>
  <div
    aria-label="Tab 1 Tab Contents"
    role="tabpanel"
  >
    Tab body 1
  </div>
</div>
`;

exports[`Tabs sets on hover 3`] = `
<div
  role="tablist"
>
  <div
    class="StyledBox-bStriS kZxJuf"
  >
    <button
      aria-expanded="true"
      aria-selected="true"
      class="StyledButton-gXzblK fYUIhN"
      role="tab"
      type="button"
    >
      <div
        class="StyledBox-bStriS gNLzjT"
      >
        <span
          class="StyledText-eJMSZI bxnpJv"
        >
          Tab 1
        </span>
      </div>
    </button>
    <button
      aria-expanded="false"
      aria-selected="false"
      class="StyledButton-gXzblK fYUIhN"
      role="tab"
      type="button"
    >
      <div
        class="StyledBox-bStriS cXdcRx"
      >
        <span
          class="StyledText-eJMSZI guglNP"
          color="dark-4"
        >
          Tab 2
        </span>
      </div>
    </button>
  </div>
  <div
    aria-label="Tab 1 Tab Contents"
    role="tabpanel"
  >
    Tab body 1
  </div>
</div>
`;

exports[`Tabs sets on hover 4`] = `
<div
  role="tablist"
>
  <div
    class="StyledBox-bStriS kZxJuf"
  >
    <button
      aria-expanded="true"
      aria-selected="true"
      class="StyledButton-gXzblK fYUIhN"
      role="tab"
      type="button"
    >
      <div
        class="StyledBox-bStriS gNLzjT"
      >
        <span
          class="StyledText-eJMSZI bxnpJv"
        >
          Tab 1
        </span>
      </div>
    </button>
    <button
      aria-expanded="false"
      aria-selected="false"
      class="StyledButton-gXzblK fYUIhN"
      role="tab"
      type="button"
    >
      <div
        class="StyledBox-bStriS elvBnI"
      >
        <span
          class="StyledText-eJMSZI guglNP"
          color="dark-4"
        >
          Tab 2
        </span>
      </div>
    </button>
  </div>
  <div
    aria-label="Tab 1 Tab Contents"
    role="tabpanel"
  >
    Tab body 1
  </div>
</div>
`;
